<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Circle Menu</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>



    <!-- Menu names -->
    <string name="business_card">Business Card</string>
    <string name="calendar">Calendar</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="facebook">Facebook</string>
    <string name="googleP">Google+</string>
    <string name="mail">Mail</string>
    <string name="map">Location</string>
    <string name="bookService">Book service</string>
    <string name="voice_search">Voice Search</string>

</resources>
